test/cli/test-mutating-policy/json-payload/patched-resource.yaml
apiVersion: v1
data:
  key1: value1
  key2: value2
kind: ConfigMap
metadata:
  labels:
    source: kyverno
  mutated: "true"
  name: test-config
  namespace: default
