test/cli/test-mutating-policy/json-payload/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: json-payload-mutation-test
jsonPayload: ./resource.json
policies:
- policy.yaml
results:
- isMutatingPolicy: true
  kind: ""
  policy: test-json-payload-mutation
  result: pass
  patchedResources: patched-resource.yaml
